assets/css/global.css
#footer{
    margin-top: 20px;
}
#nav{
    margin-bottom: 20px;
}
#timeRange,#makeDay{
    text-align: center;
    text-indent: -10%;
}
.fa-caret-down,.fa-caret-up{
    cursor: pointer;
}

